<resources>
    <string name="app_name">IT-Амнезия</string>
    <string name="Profile">Profile</string>
    <string name="DefaultTime">12:28</string>
    <string name="Welcome">Welcome!</string>
    <string name="CodeNoMatch">The codes don\'t match!</string>
    <string name="CreateCode">Enter access code</string>
    <string name="RepeatCode">Repeat access code</string>
    <string name="AuthByPhoneNumber">Open a deposit</string>
    <string name="Registration">Registration</string>
    <string name="Login">Login</string>
    <string name="DefaultUserName">Stan Smith</string>
    <string name="RegisterDescription">Registration by phone number </string>
    <string name="EmptyCode">Pin code is empty!</string>
    <string name="Message">Message</string>
    <string name="InvalidPinCode">Invalid Pin Code!</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="PlusSeven">+7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="ForgotCode">Forgot code</string>
    <string name="Support">Support</string>
    <string name="EnterNumber"> Enter phone number</string>
    <string name="EnterCredentials">Enter your credentials</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EnterBirthDay">Choose Birthday</string>
    <string name="Date">Date</string>
    <string name="Surname">Surname</string>
    <string name="Amount">Amount</string>
    <string name="Name">Name</string>
    <string name="EnterName">Name is empty!</string>
    <string name="EnterPhone">Phone is empty!</string>
    <string name="EnterSurname">Surname is empty!</string>
    <string name="EnterLastName">Last name is empty!</string>
    <string name="LastName">Last Name</string>
    <string name="Password">Password</string>
    <string name="EnterCode">Enter code</string>
    <string name="EnterPassword">Enter password</string>
    <string name="PasswordsDontMatch">Passwords don\'t match!</string>
    <string name="resend_two_min">Resend confirmation code in:</string>
    <string name="ConfirmCodeAccountSent">Enter the code that was sent to your phone number to confirm your account</string>
    <string name="CheckCredentials">Please, check your credentials</string>
    <string name="SomethingWentWrong">Something went wrong…</string>
    <string name="Confirm">Confirm</string>
    <string name="CreateAccount">Create new account</string>
    <string name="INVALID_CODE">Wrong code</string>
    <string name="RESEND_CODE">Resend sms-code</string>
    <string name="LogOut">Log out</string>
    <string name="RegistrationSuccess">You have successfully registered in!</string>
    <string name="AuthenticationSuccess">You have successfully authenticated!</string>
    <string name="ConfirmPasswordEmpty">Confirm password is empty!</string>
    <string name="GoodMorning">Good morning, %1$s!</string>
    <string name="ExitConfirm">Do you want to exit the app?</string>
    <string name="Next">Next</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Home">Home</string>
    <string name="EnterPicode">Enter Pin Code</string>
    <string name="Cancel">Cancel</string>
    <string name="NotConfirmed">Not confirmed</string>
    <string name="FromTime">From: </string>
    <string name="TillTime">Till: </string>
    <string name="From">From: </string>
    <string name="To">To: </string>
    <string name="History">History</string>
    <string name="FingerprintNotSupported">Fingerprint authentication not supported on the device</string>
    <string name="AuthFailed">Authentication Failed</string>
    <string name="NoFingerprintRegistered">No Fingerprint registered</string>
    <string name="FingerprintNotAvailableOnThisOS">Fingerprint feature is not available on this OS</string>
    <string name="All">All</string>
</resources>