<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_round_corners_top_white">

    <TextView
        android:id="@+id/confirmationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:lineSpacingExtra="6sp"
        android:lines="3"
        android:fontFamily="@font/gteestiprotext_regular"
        android:text="@string/ConfirmCodeAccountSent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextConfirmAccountCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/gteestiprotext_regular"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmationTextView"
        tools:ignore="SpeakableTextPresentCheck">

    </EditText>

    <TextView
        android:id="@+id/textViewRepeatSendAccountCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:fontFamily="@font/gteestiprotext_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmAccountCode"
        tools:text="Resend confirmation code in: 0:45" />

    <Button
        android:id="@+id/buttonSendConfirmAccountCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_shape"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepeatSendAccountCode">

    </Button>

    <TextView
        android:id="@+id/tv_wrongAccountCodeError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:text="@string/INVALID_CODE"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepeatSendAccountCode" />

    <TextView
        android:id="@+id/tv_resendAccountCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:text="@string/RESEND_CODE"
        android:textColor="@color/mainColor"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepeatSendAccountCode" />

</androidx.constraintlayout.widget.ConstraintLayout>